# minimax-usage-dashboard

./: .gitignore  LICENSE  README.md  export_bill_1780590422.csv  pyproject.toml  start.bat
app/: config.py  db.py  main.py  parser.py
app/routes/: api.py
app/services/: analytics.py  billing.py  importer.py
app/static/css/: base.css
app/static/js/: dashboard.js  import.js  settings.js  theme.js
app/templates/: base.html  dashboard.html  settings.html
docs/superpowers/plans/: 2026-06-05-minimax-usage-dashboard.md
docs/superpowers/specs/: 2026-06-05-minimax-usage-dashboard-design.md
tests/: conftest.py  test_analytics.py  test_api.py  test_billing.py  test_db.py  test_importer.py  test_parser.py
tests/fixtures/: sample.csv
